@@ -9,6 +9,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
@@ -32,7 +33,7 @@ import uk.gov.hmcts.reform.prl.services.hearings.HearingService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
@@ -40,25 +41,14 @@ import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 @Slf4j
 @RestController
 @SecurityRequirement(name = "Bearer Authentication")
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class CaseController {
-
-    @Autowired
-    ObjectMapper objectMapper;
-
-    @Autowired
-    HearingService hearingService;
-
-    @Autowired
-    CaseService caseService;
-
-    @Autowired
-    AuthorisationService authorisationService;
-
-    @Autowired
-    ConfidentialDetailsMapper confidentialDetailsMapper;
-
-    @Autowired
-    AuthTokenGenerator authTokenGenerator;
+    private final ObjectMapper objectMapper;
+    private final HearingService hearingService;
+    private final CaseService caseService;
+    private final AuthorisationService authorisationService;
+    private final ConfidentialDetailsMapper confidentialDetailsMapper;
+    private final AuthTokenGenerator authTokenGenerator;
     private static final String INVALID_CLIENT = "Invalid Client";
 
     @GetMapping(path = "/{caseId}", produces = APPLICATION_JSON)
@@ -162,7 +152,7 @@ public class CaseController {
         } else {
             throw (new RuntimeException(INVALID_CLIENT));
         }
-        return caseDataList.stream().map(this::buildCitizenCaseData).collect(Collectors.toList());
+        return caseDataList.stream().map(this::buildCitizenCaseData).toList();
     }
 
     private CitizenCaseData buildCitizenCaseData(CaseData caseData) {
@@ -251,6 +241,24 @@ public class CaseController {
         @PathVariable("caseId") String caseId) {
         if (isAuthorized(authorisation, s2sToken)) {
             return hearingService.getHearings(authorisation, caseId);
+        } else {
+            throw (new RuntimeException(INVALID_CLIENT));
+        }
+    }
+
+    @GetMapping(value = "/fetchIdam-Am-roles/{emailId}", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
+    @Operation(description = "Get hearing details for a case")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "success"),
+        @ApiResponse(responseCode = "401", description = "Provided Authorization token is missing or invalid"),
+        @ApiResponse(responseCode = "500", description = "Internal Server Error")
+    })
+    public Map<String, String> fetchIdamAmRoles(
+        @RequestHeader(AUTHORIZATION) String authorisation,
+        @PathVariable("emailId") String emailId) {
+        boolean isAuthorised = authorisationService.authoriseUser(authorisation);
+        if (isAuthorised) {
+            return caseService.fetchIdamAmRoles(authorisation, emailId);
         } else {
             throw (new RuntimeException(INVALID_CLIENT));
         }
